# databasus-ansible-collection

./: .gitignore  .python-version  README.md  build.yaml  docker-compose.yml  main.py  manifest.yaml  module_doc.md.j2  openapi.json  pyproject.toml  requeriments.yml
ansible_collections/zeqk/databasus/: README.md  galaxy.yml
collections/ansible_collections/zeqk/databasus/: README.md  galaxy.yml
docs/: agent.md  agent_rotate_token.md  audit_log.md  auth.md  backup.md  backup_cancel.md  backup_config.md  backup_download_token.md  backup_file.md  backup_restore_token.md  database.md  database_backup.md  database_copy.md  database_restore_token.md  database_test_connection.md  database_transfer.md  database_trigger.md  disk.md  healthcheck_attempt.md  healthcheck_config.md  membership_member.md  membership_transfer_ownership.md  notifier.md  notifier_databases_count.md  notifier_is_using.md  notifier_test.md  notifier_transfer.md  restore.md  restore_restore.md  storage.md  storage_databases_count.md  storage_is_using.md  storage_test.md  storage_transfer.md  system.md  user.md  user_activate.md  user_deactivate.md  verification.md  verification_cancel.md  (+5 more)
scripts/: generate_collection.py
zeqk/databasus/: README.md
zeqk/databasus/plugins/modules/: agent_rotate_token.py  auth.py  backup_file.py  database.py  database_transfer.py  disk.py  healthcheck_config.py  notifier_is_using.py  notifier_test.py  notifier_transfer.py  restore.py  restore_restore.py  storage.py  storage_transfer.py  user.py  user_deactivate.py  verification.py  verification_claim.py  workspace.py  (+2 more)
(+48 files in other folders)
