[project]
name = "databasus-ansible-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible-core==2.18.18",
    "black==22.3.0",
    "autoflake==2.3.3",
    "jsonschema==4.26.0",
    "jinja2==3.0.3",
    "oyaml>=1.0",
]
